feat: docker-compose 수정
스프링부트 프로젝트 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 version: "3.9"
 
 services:
+  cen-square:
+    image: cen-square:latest
+    container_name: cen-square
+    env-files:
+      - /home/ubuntu/my-proj/
+    ports: 
+      - "8080:8080"
+    restart: always
+
   redis:
     image: redis:latest
     container_name: redis
