feat: Dockerfile 작성 및 compose.yml 분리
docker-compose.yml: 스프링부트 프로젝트 없는 버전
deploy.yaml: 스프링부트 프로젝트 있는 버전

--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,6 +1,15 @@
 version: "3.9"
 
 services:
+  cen-square:
+    image: cen-square:latest
+    container_name: cen-square
+    env-files:
+      - ${ENV_PATH}
+    ports: 
+      - "8080:8080"
+    restart: always
+
   redis:
     image: redis:8
     container_name: redis
