Feat: 회원가입 이메일 정보 파싱 기능 추가
- 카카오 OAuth 응답에서 "kakao_account" 내부의 email 값을 파싱하도록 로직 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,6 +38,7 @@ spring:
             authorization-grant-type: authorization_code
             redirect-uri: ${KAKAO_REDIRECT_URI}
             scope:
+              - account_email
               - friends
               - talk_message
             client-name: kakao
