--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,6 +22,7 @@ jobs:
       - name: Build JAR with Gradle
         run: |
           echo "Gradle 빌드를 시작합니다."
+          chmod +x ./gradlew 
           ./gradlew build
 
       - name: Generate Dockerfile dynamically
