cicd DB 테스트 제외외

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,7 +23,8 @@ jobs:
         run: |
           echo "Gradle 빌드를 시작합니다."
           chmod +x ./gradlew 
-          ./gradlew build
+          ./gradlew build -x test
+
 
       - name: Generate Dockerfile dynamically
         run: |
