--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -63,7 +63,7 @@ jobs:
               [ "$PWD" = "$HOME/spring-app" ] && rm -rf *
 
               echo "Bastion에서 프로젝트 복사합니다"
-              cp -r /home/ubuntu/spring-deploy .
+              cp -a /home/ubuntu/spring-deploy/. .
 
               echo "기존 Docker 컨테이너 정리합니다"
               docker stop spring-app || true
