dockerfile appjar 분리

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -60,7 +60,7 @@ jobs:
           ls -l build/libs/*.jar || echo "JAR 파일 없음!"
       
       - name: Rename jar for consistent SCP
-        run: cp build/libs/cen-square-0.0.1-SNAPSHOT.jar ./app.jar
+        run: cp build/libs/cen-square-0.0.1-SNAPSHOT.jar ./app.jar || cp build/libs/cen-square-0.0.1-SNAPSHOT-plain.jar ./app.jar
 
       - name: Confirm app.jar existence
         run: ls -l app.jar
@@ -88,13 +88,23 @@ jobs:
               echo "폴더가 없습니다."
             fi
 
-      - name: Upload project to Bastion server
+      - name: Upload Dockerfile to Bastion server
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.BASTION_HOST }}
           username: ${{ secrets.BASTION_USER }}
           key: ${{ secrets.EC2_KEY }}
-          source: ./Dockerfile ./app.jar
+          source: "./Dockerfile"
+          target: "~/spring-deploy"
+          debug: true
+
+      - name: Upload app.jar to Bastion server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.BASTION_HOST }}
+          username: ${{ secrets.BASTION_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          source: "./app.jar"
           target: "~/spring-deploy"
           debug: true
           
