Refactor: JWT 만료시간 설정 외부화
- Access/Refresh Token의 만료시간을 application.yml과 .env 파일로 분리
- JwtProvider에서 @Value로 만료시간 주입받도록 개선
- 하드코딩된 만료시간 제거로 환경별 설정 유연성 확보
- .env에 JWT_ACCESS_EXPIRATION, JWT_REFRESH_EXPIRATION 추가

--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ DDL_AUTO_OPTION=create
 # Redis 설정
 REDIS_HOST=localhost
 REDIS_PORT=6379
+
+# JWT 토큰 기간 설정 (15분:900000 7일:604800000 )
+JWT_ACCESS_EXPIRATION=604800000
+JWT_REFRESH_EXPIRATION=604800000
