--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,3 +53,6 @@ jwt:
   secret:
     access: ${JWT_ACCESS_SECRET}
     refresh: ${JWT_REFRESH_SECRET}
+  expiration:
+    access: ${JWT_ACCESS_EXPIRATION}
+    refresh: ${JWT_REFRESH_EXPIRATION}
